# vfa

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  requirements.txt  setup.cfg  setup.py
vfa/: __init__.py  _version.py  main.py
vfa/data_configs/lumir/: lumir_test.json  lumir_train.json  lumir_val.json
vfa/datasets/: __init__.py  cl_dataset.py  inter_dataset.py  intra_dataset.py  l2r2022nlst_dataset.py  l2r2022oasis_dataset.py  l2r2024lumir_dataset.py  pairwise_dataset.py
vfa/losses/: __init__.py  bending_loss.py  corrratio_loss.py  dice_loss.py  grad_loss.py  mi_loss.py  mse_loss.py  ncc_loss.py  rngf_loss.py
vfa/models/: __init__.py  base_model.py  im2grid.py  vfa.py
vfa/params/vfa/: vfa_mi.json  vfa_ncc.json
vfa/utils/: utils.py
