[metadata]
name = vfa
version = attr: vfa.__version__
description = VFA: Vector Field Attention
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yihao6/vfa
author = Yihao Liu
author_email = yliu236@jhu.edu
license = GNU General Public License v3
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

keywords = registration, medical images
project_urls =
    Bug Tracker = https://github.com/yihao6/vfa/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
test_suite = tests
zip_safe = False

[options.packages.find]
exclude =
    tests
    docs

[options.entry_points]
console_scripts =
    vfa-run = vfa.main:main
